# gpu-stream-join-benchmark

./: .gitignore  CMakeLists.txt  README.md
cmake/: macros.cmake
configs/: config-example.yaml  config-prog-long.yaml  dk-mult-5.yaml  ps-cpu-sja.yaml  ps-cpu.yaml  sota-gpu-hj-intra-atomic.yaml  sota-gpu-hj-intra.yaml  sota-gpu-nlj-ck.yaml  sota-gpu-nlj-eager-bm.yaml  sota-gpu-nlj-eager.yaml  sota-gpu-nlj.yaml  zi-cpu-hj.yaml  zi-cpu-smj.yaml  zi-gpu-hj.yaml  zi-gpu-smj.yaml
executable/: CMakeLists.txt  debug_datagen.cpp  runExperiment.cpp  standalone.cpp
include/experiment/: Config.hpp  Runner.hpp
include/sjb/sink/: Sink.h
include/sjb/source/: Source.hpp
include/sjb/utils/: CudaUtils.cuh  DataGenerator.hpp  ErrorChecking.cuh  ExecutionStatistic.hpp  Logger.hpp  PowerMeasurementAgent.hpp  RandomGenerator.cuh  ResultTuple.hpp  Tuple.hpp  UtilityFunctions.hpp
include/sjb/windowing/: BaseWindowing.cuh  WindowingFactory.hpp
include/sjb/windowing/eager/: CountBased.cuh  TimeBased.cuh
include/sjb/windowing/eager/executor/: BaseEagerExecutor.hpp
include/sjb/windowing/eager/executor/CPU/: CPU_HJ.hpp  CPU_NLJ.hpp  CPU_SMJ.hpp
include/sjb/windowing/eager/executor/GPU/: GPU_HJ.cuh  GPU_HJ_Atomic.cuh  GPU_HJ_PK.cuh  (+4 more)
include/sjb/windowing/lazy/: CountBased.cuh  TimeBased.cuh
include/sjb/windowing/lazy/executor/: BaseLazyExecutor.hpp
src/: CMakeLists.txt
src/experiment/: CMakeLists.txt  Runner.cpp
src/sjb/: CMakeLists.txt
src/sjb/sink/: CMakeLists.txt  Sink.cpp
src/sjb/source/: CMakeLists.txt  Source.cpp
src/sjb/utils/: CMakeLists.txt  DataGenerator.cpp  PowerMeasurementAgent.cpp  RandomGenerator.cu  UtilityFunctions.cpp
src/sjb/windowing/: CMakeLists.txt  WindowingFactory.cpp
src/sjb/windowing/eager/: CMakeLists.txt  TimeBased.cu
src/sjb/windowing/eager/executor/: CMakeLists.txt
src/sjb/windowing/eager/executor/CPU/: CMakeLists.txt  CPU_HJ.cpp  CPU_NLJ.cpp  CPU_SMJ.cpp
src/sjb/windowing/eager/executor/GPU/: CMakeLists.txt  GPU_HJ.cu  GPU_HJ_Atomic.cu  GPU_HJ_PK.cu  GPU_NLJ.cu  GPU_NLJ_BM.cu  GPU_PK_Empty.cu  GPU_SMJ.cu
src/sjb/windowing/lazy/: CMakeLists.txt  TimeBased.cu
src/sjb/windowing/lazy/executor/CPU/: CMakeLists.txt  CPU_HJ.cpp  CPU_NLJ.cpp  CPU_SMJ.cpp
src/sjb/windowing/lazy/executor/GPU/: CMakeLists.txt  GPU_HELLS.cu  GPU_HJ.cu  GPU_HJ_Atomic.cu  GPU_HJ_CountKernel.cu  GPU_HJ_EstimatedSelectivity.cu  GPU_HJ_NoOutput.cu  GPU_NLJ.cu  GPU_NLJ_Bitmap.cu  GPU_NLJ_CountKernel.cu  GPU_NLJ_EstimatedSelectivity.cu  GPU_NLJ_NoOutput.cu  GPU_SMJ.cu  GPU_SMJ_Atomic.cu  GPU_SMJ_CountKernel.cu  GPU_SMJ_EstimatedSelectivity.cu  GPU_SMJ_NoOutput.cu
(+19 files in other folders)
